# nagpra_scraper

./: .gitignore  README.md  pyproject.toml
scrape/: get_list_of_pids.py  scrape.py  split_into_batches.py
