[tool.poetry]
name = "scrape-questionable-content"
version = "0.1.0"
description = ""
authors = ["Mark Baggett <mbagget1@utk.edu>"]
readme = "README.md"
packages = [{include = "scrape_questionable_content"}]

[tool.poetry.dependencies]
python = "^3.11"
requestium = "^0.1.15"
tqdm = "^4.64.1"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
